--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@riotprompt/riotplan-cli",
-  "version": "0.0.3",
+  "version": "0.0.4-dev.0",
   "description": "CLI for RiotPlan - manage and execute plans",
   "type": "module",
   "bin": {
