--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@riotprompt/riotplan-cli",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "CLI for RiotPlan - manage and execute plans",
   "type": "module",
   "bin": {
     "riotplan": "./dist/cli.js"
   },
   "main": "./dist/cli.js",
+  "engines": {
+    "node": ">=24.0.0"
+  },
   "scripts": {
     "clean": "rm -rf dist",
     "build": "vite build",
@@ -35,7 +38,7 @@
     "commander": "^14.0.2"
   },
   "peerDependencies": {
-    "@riotprompt/riotplan": "^0.0.3"
+    "@riotprompt/riotplan": "^0.0.4"
   },
   "peerDependenciesMeta": {
     "@riotprompt/riotplan": {
