chore(deps): add @theunwalked/cardigantime ^0.0.22

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "url": "https://github.com/kjerneverk/riotplan-cli"
   },
   "dependencies": {
+    "@theunwalked/cardigantime": "^0.0.22",
     "chalk": "^5.4.1",
     "commander": "^14.0.2"
   },
