refactor(cli): delegate command registration to external @riotprompt/riotplan-commands-* packages
- Add local file deps for plan/status/step/feedback command packages
- Update CLI to import register*Commands from packages (thin shell)
- Remove bundled command implementations under src/commands

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   },
   "dependencies": {
     "@riotprompt/riotplan": "^0.0.4",
+    "@riotprompt/riotplan-commands-plan": "file:../commands-plan",
+    "@riotprompt/riotplan-commands-status": "file:../commands-status",
+    "@riotprompt/riotplan-commands-step": "file:../commands-step",
+    "@riotprompt/riotplan-commands-feedback": "file:../commands-feedback",
     "@theunwalked/cardigantime": "^0.0.22",
     "chalk": "^5.4.1",
     "commander": "^14.0.2"
